--- a/src/components/UI/Modal/index.scss
+++ b/src/components/UI/Modal/index.scss
@@ -20,6 +20,7 @@
   width: 500px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   justify-self: center;
+  border-radius: 10px;
 }
 
 .container {
