--- a/src/components/Kanban/Column/index.scss
+++ b/src/components/Kanban/Column/index.scss
@@ -10,6 +10,8 @@
 
   h3 {
     padding: 8px;
+    margin: 0;
+    text-align: center;
   }
 
   #column-droppable {
@@ -20,7 +22,7 @@
   }
 }
 
-.column-card {
+.add-card {
   margin: 8px;
   height: 50px;
   display: flex;
@@ -28,8 +30,13 @@
   justify-content: center;
   cursor: pointer;
 
+  span {
+    margin-left: 5px;
+  }
+
   &:hover {
     background-color: rgb(185, 189, 190);
     transition: background-color 0.8s ease;
+    border-radius: 10px;
   }
 }
