--- a/src/components/Kanban/Column/index.scss
+++ b/src/components/Kanban/Column/index.scss
@@ -1,42 +1,38 @@
 #column-draggable {
   margin: 8px;
-  border: 1px solid lightgrey;
-  background-color: rgb(217, 220, 223);
+  // border: 1px solid lightgrey;
+  // background-color: rgb(217, 220, 223);
   border-radius: 10px;
   width: 300px;
   display: flex;
   flex-direction: column;
   height: 100%;
 
-  h3 {
+  .column-header {
     padding: 8px;
     margin: 0;
-    text-align: center;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+
+    .title {
+      text-align: center;
+      flex: 1 0 auto;
+      font-size: 1.2em;
+    }
   }
 
   #column-droppable {
-    padding: 8px;
+    // padding: 8px;
     transition: background-color 0.2s ease;
     flex-grow: 1;
-    min-height: 10px;
+    min-height: 70vh;
+    border: 1px solid lightgrey;
+    background-color: rgb(217, 220, 223);
   }
 }
 
 .add-card {
-  margin: 8px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   cursor: pointer;
-
-  span {
-    margin-left: 5px;
-  }
-
-  &:hover {
-    background-color: rgb(185, 189, 190);
-    transition: background-color 0.8s ease;
-    border-radius: 10px;
-  }
 }
