--- a/src/components/UI/AddComponent/AddTag/index.scss
+++ b/src/components/UI/AddComponent/AddTag/index.scss
@@ -1,4 +1,4 @@
-#add-category {
+#add-tag {
   border: 1px solid lightgray;
   background-color: #f1f1f1;
   color: #000 !important;
@@ -108,7 +108,7 @@
       }
     }
   }
-  .categories-ul {
+  .tags-ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -119,7 +119,7 @@
     align-items: center;
     li {
       display: flex;
-      .categories-li-container {
+      .tags-li-container {
         border: 1px solid lightgray;
         color: #fff;
         width: 150px;
@@ -129,7 +129,7 @@
         display: flex;
         align-items: center;
         cursor: pointer;
-        .categories-label {
+        .tags-label {
           margin: 0 10px;
         }
       }
