--- a/src/components/UI/AddComponents/AddTag/index.scss
+++ b/src/components/UI/AddComponents/AddTag/index.scss
@@ -4,6 +4,17 @@
   color: #000 !important;
   cursor: pointer;
 }
+.portal-outer-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+}
 .absolute-position-portal {
   position: absolute;
   border: 1px solid lightgray;
@@ -15,6 +26,9 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  p {
+    margin-top: 0;
+  }
   .create-tag-container {
     display: flex;
     margin: 0 20px 15px 20px;
@@ -24,6 +38,14 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    span {
+      margin-left: 5px;
+    }
+  }
+  .top-nav {
+    padding: 10px;
+    display: flex;
+    justify-content: flex-end;
   }
   #create-tag {
     .create-tag-inputs {
