--- a/src/components/UI/AddComponents/AddTag/index.scss
+++ b/src/components/UI/AddComponents/AddTag/index.scss
@@ -19,8 +19,7 @@
   border: 1px solid lightgray;
   border-radius: 5px;
   background: #fff;
-  margin: 10px;
-  // padding: 20px;
+  margin-left: 10px;
   width: 200px;
   display: flex;
   flex-direction: column;
@@ -64,6 +63,7 @@
         .create-tag-input-color {
           .create-tag-input-color-ul,
           .create-tag-input-character-ul {
+            align-items: center;
             list-style-type: none;
             display: grid;
             grid-template-columns: repeat(auto-fill, 25px);
@@ -77,8 +77,8 @@
               cursor: pointer;
             }
             .create-tag-input-character-tag > div {
-              width: 20px;
-              height: 20px;
+              width: 25px;
+              height: 25px;
               cursor: pointer;
             }
             .create-tag-input-color-tag {
@@ -99,11 +99,10 @@
                 justify-content: center;
               }
               .create-tag-input-character-tag-selected {
-                border: 5px solid coral;
-                // width: 100%;
-                // height: 100%;
+                border: 2px solid coral;
                 border-radius: 50%;
                 display: flex;
+
                 align-items: center;
                 justify-content: center;
               }
@@ -127,6 +126,37 @@
         margin-right: 5px;
       }
     }
+    .create-tag-preview-tag {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 50px;
+      max-width: 100px;
+      max-height: 25px;
+      height: 25px;
+      font-size: 12px;
+      padding: 2px 5px;
+      color: #fff;
+    }
+    .create-tag-button-group {
+      padding-bottom: 10px;
+      .create-tag-button-create {
+        margin-right: 10px;
+        background-color: #03b42a;
+      }
+      .create-tag-button-reset {
+        background-color: #df1934;
+      }
+      .create-tag-button-create,
+      .create-tag-button-reset {
+        color: #f1f1f1;
+        border: none;
+        outline: none;
+        padding: 10px 16px;
+        border-radius: 10px;
+        cursor: pointer;
+      }
+    }
   }
   .tags-ul {
     list-style-type: none;
@@ -135,13 +165,15 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    align-content: center;
     align-items: center;
     li {
       display: flex;
+      justify-content: space-around;
+      width: 100%;
       .tags-li-container {
         color: #fff;
-        width: 150px;
+        width: 75%;
+        margin-left: 6%;
         height: 25px;
         padding: 5px;
         justify-content: space-between;
@@ -151,6 +183,27 @@
         .tags-label {
           margin: 0 10px;
         }
+      }
+      .tags-edit-label {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      &:hover {
+        transition: background-color 0.8s ease;
+        .tags-edit-label {
+          cursor: pointer;
+          visibility: visible;
+          opacity: 1;
+          transition: opacity 0.8s linear;
+          width: 20%;
+        }
+      }
+      &:not(:hover) .tags-edit-label {
+        visibility: hidden;
+        opacity: 0;
+        width: 0%;
       }
     }
   }
