--- a/src/components/UI/AddComponents/AddTag/index.scss
+++ b/src/components/UI/AddComponents/AddTag/index.scss
@@ -3,207 +3,209 @@
   color: #000 !important;
   cursor: pointer;
 }
-.portal-outer-container {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.3);
-}
-.absolute-position-portal {
-  position: absolute;
-  border: 1px solid lightgray;
-  border-radius: 5px;
-  background: #fff;
-  margin-left: 10px;
-  width: 200px;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  p {
-    margin-top: 0;
-  }
-  .create-tag-container {
-    display: flex;
-    margin: 0 20px 15px 20px;
-    border: 1px solid lightgray;
-    height: 30px;
-    align-items: center;
+#tag-pop-portal {
+  .portal-outer-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: grid;
     justify-content: center;
-    cursor: pointer;
-    span {
-      margin-left: 5px;
-    }
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.3);
   }
-  .top-nav {
-    padding: 10px;
-    display: flex;
-    justify-content: flex-end;
-  }
-  #create-tag {
-    .create-tag-inputs {
-      display: flex;
-      flex-direction: column;
-      align-items: start;
-      padding: 15px;
-      label {
-        display: flex;
-        margin-bottom: 3px;
-      }
-      .create-tag-input-container {
-        margin-bottom: 10px;
-        width: 100%;
-        select {
-          width: 100%;
-        }
-        .create-tag-input-color {
-          .create-tag-input-color-ul,
-          .create-tag-input-character-ul {
-            align-items: center;
-            list-style-type: none;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, 25px);
-            grid-gap: 0.5rem;
-            justify-content: space-between;
-            padding: 0;
-            margin: 0;
-            .create-tag-input-color-tag {
-              width: 30px;
-              height: 30px;
-              cursor: pointer;
-            }
-            .create-tag-input-character-tag > div {
-              width: 25px;
-              height: 25px;
-              cursor: pointer;
-            }
-            .create-tag-input-color-tag {
-              border-radius: 50%;
-              .create-tag-input-color-tag-selected {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                color: #fff;
-                width: 100%;
-                height: 100%;
-              }
-            }
-            .create-tag-input-character-tag {
-              div {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-              }
-              .create-tag-input-character-tag-selected {
-                border: 2px solid coral;
-                border-radius: 50%;
-                display: flex;
-
-                align-items: center;
-                justify-content: center;
-              }
-            }
-          }
-          .create-tag-input-color-ul:after {
-            flex: auto;
-            content: "";
-          }
-        }
-      }
-    }
-    .create-tag-back {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 10px;
-      cursor: pointer;
-      border-bottom: 1px solid lightgray;
-      .create-tag-back-icon {
-        margin-right: 5px;
-      }
-    }
-    .create-tag-preview-tag {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-width: 50px;
-      max-width: 100px;
-      max-height: 25px;
-      height: 25px;
-      font-size: 12px;
-      padding: 2px 5px;
-      color: #fff;
-    }
-    .create-tag-button-group {
-      padding-bottom: 10px;
-      .create-tag-button-create {
-        margin-right: 10px;
-        background-color: #03b42a;
-      }
-      .create-tag-button-reset {
-        background-color: #df1934;
-      }
-      .create-tag-button-create,
-      .create-tag-button-reset {
-        color: #f1f1f1;
-        border: none;
-        outline: none;
-        padding: 10px 16px;
-        border-radius: 10px;
-        cursor: pointer;
-      }
-    }
-  }
-  .tags-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  .tag-popup {
+    position: absolute;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    background: #fff;
+    margin-left: 10px;
+    width: 200px;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    li {
+    text-align: center;
+    p {
+      margin-top: 0;
+    }
+    .create-tag-container {
       display: flex;
-      justify-content: space-around;
-      width: 100%;
-      .tags-li-container {
-        color: #fff;
-        width: 75%;
-        margin-left: 6%;
-        height: 25px;
-        padding: 5px;
-        justify-content: space-between;
+      margin: 0 20px 15px 20px;
+      border: 1px solid lightgray;
+      height: 30px;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      span {
+        margin-left: 5px;
+      }
+    }
+    .top-nav {
+      padding: 10px;
+      display: flex;
+      justify-content: flex-end;
+    }
+    #create-tag {
+      .create-tag-inputs {
         display: flex;
-        align-items: center;
-        cursor: pointer;
-        .tags-label {
-          margin: 0 10px;
+        flex-direction: column;
+        align-items: start;
+        padding: 15px;
+        label {
+          display: flex;
+          margin-bottom: 3px;
+        }
+        .create-tag-input-container {
+          margin-bottom: 10px;
+          width: 100%;
+          select {
+            width: 100%;
+          }
+          .create-tag-input-color {
+            .create-tag-input-color-ul,
+            .create-tag-input-character-ul {
+              align-items: center;
+              list-style-type: none;
+              display: grid;
+              grid-template-columns: repeat(auto-fill, 25px);
+              grid-gap: 0.5rem;
+              justify-content: space-between;
+              padding: 0;
+              margin: 0;
+              .create-tag-input-color-tag {
+                width: 30px;
+                height: 30px;
+                cursor: pointer;
+              }
+              .create-tag-input-character-tag > div {
+                width: 25px;
+                height: 25px;
+                cursor: pointer;
+              }
+              .create-tag-input-color-tag {
+                border-radius: 50%;
+                .create-tag-input-color-tag-selected {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  color: #fff;
+                  width: 100%;
+                  height: 100%;
+                }
+              }
+              .create-tag-input-character-tag {
+                div {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                }
+                .create-tag-input-character-tag-selected {
+                  border: 2px solid coral;
+                  border-radius: 50%;
+                  display: flex;
+
+                  align-items: center;
+                  justify-content: center;
+                }
+              }
+            }
+            .create-tag-input-color-ul:after {
+              flex: auto;
+              content: "";
+            }
+          }
         }
       }
-      .tags-edit-label {
+      .create-tag-back {
         display: flex;
         align-items: center;
         justify-content: center;
-      }
-
-      &:hover {
-        transition: background-color 0.8s ease;
-        .tags-edit-label {
-          cursor: pointer;
-          visibility: visible;
-          opacity: 1;
-          transition: opacity 0.8s linear;
-          width: 20%;
+        padding: 10px;
+        cursor: pointer;
+        border-bottom: 1px solid lightgray;
+        .create-tag-back-icon {
+          margin-right: 5px;
         }
       }
-      &:not(:hover) .tags-edit-label {
-        visibility: hidden;
-        opacity: 0;
-        width: 0%;
+      .create-tag-preview-tag {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 50px;
+        max-width: 100px;
+        max-height: 25px;
+        height: 25px;
+        font-size: 12px;
+        padding: 2px 5px;
+        color: #fff;
+      }
+      .create-tag-button-group {
+        padding-bottom: 10px;
+        .create-tag-button-create {
+          margin-right: 10px;
+          background-color: #03b42a;
+        }
+        .create-tag-button-reset {
+          background-color: #df1934;
+        }
+        .create-tag-button-create,
+        .create-tag-button-reset {
+          color: #f1f1f1;
+          border: none;
+          outline: none;
+          padding: 10px 16px;
+          border-radius: 10px;
+          cursor: pointer;
+        }
+      }
+    }
+    .tags-ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-items: center;
+      li {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        .tags-li-container {
+          color: #fff;
+          width: 75%;
+          margin-left: 6%;
+          height: 25px;
+          padding: 5px;
+          justify-content: space-between;
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+          .tags-label {
+            margin: 0 10px;
+          }
+        }
+        .tags-edit-label {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+
+        &:hover {
+          transition: background-color 0.8s ease;
+          .tags-edit-label {
+            cursor: pointer;
+            visibility: visible;
+            opacity: 1;
+            transition: opacity 0.8s linear;
+            width: 20%;
+          }
+        }
+        &:not(:hover) .tags-edit-label {
+          visibility: hidden;
+          opacity: 0;
+          width: 0%;
+        }
       }
     }
   }
