Fix create navbar tag selection.

--- a/src/components/UI/Navbar/index.scss
+++ b/src/components/UI/Navbar/index.scss
@@ -53,7 +53,7 @@
     align-items: center;
     background-color: rgba(0, 0, 0, 0.3);
   }
-  .navbar-popup {
+  #navbar-popup {
     position: absolute;
     top: 0;
     border: 1px solid lightgray;
