--- a/src/components/UI/MarkdownEditor/Editor/index.scss
+++ b/src/components/UI/MarkdownEditor/Editor/index.scss
@@ -1,7 +1,7 @@
 #editor-mode {
   height: 100%;
   .editor-description {
-    height: 60%;
+    height: 200px;
   }
   .tag-container {
     margin-bottom: 10px;
