--- a/src/components/UI/Popup/Back/index.scss
+++ b/src/components/UI/Popup/Back/index.scss
@@ -1,11 +1,15 @@
 #back {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 10px 10px 10px;
-  cursor: pointer;
-  border-bottom: 1px solid lightgray;
-  .back-icon {
-    margin-right: 5px;
+  .back-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10px 10px 10px;
+    border-bottom: 1px solid lightgray;
+    .back-icon {
+      margin-right: 5px;
+    }
+    div {
+      cursor: pointer;
+    }
   }
 }
