--- a/src/components/UI/Navbar/index.scss
+++ b/src/components/UI/Navbar/index.scss
@@ -17,9 +17,9 @@
       margin-right: auto;
     }
     .active-li {
-      background-color: rgb(201, 201, 201);
+      background-color: rgba(108, 191, 255, 0.4);
+      // background-color: rgb(201, 201, 201);
     }
-
     li > span {
       margin-left: 5px;
     }
@@ -33,7 +33,11 @@
       cursor: pointer;
     }
     li:not(.brand):hover {
-      background-color: rgb(201, 201, 201);
+      background-color: rgb(243, 243, 243);
+      transition: box-shadow 0.2s ease;
+      transition: background-color 0.2s ease;
+      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.16),
+        2px 3px 6px rgba(0, 0, 0, 0.23);
     }
   }
   ul > li:not(:first-child):not(.brand) {
