CSS changes to card and column dragging. Button CSS

--- a/src/components/UI/Navbar/components/Create/index.scss
+++ b/src/components/UI/Navbar/components/Create/index.scss
@@ -27,7 +27,7 @@
       margin-bottom: 10px;
     }
     button:hover {
-      background-color: #c9c9c9;
+      background-color: rgb(219, 219, 219);
     }
   }
 }
