--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -35,7 +35,7 @@
   }
 }
 
-.is-dragging {
+.card-is-dragging {
   background-color: rgb(245, 250, 248) !important;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.16), 4px 4px 4px rgba(0, 0, 0, 0.23) !important;
 }
