--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -4,7 +4,7 @@
   width: 300px;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 99%;
 
   .column-header {
     background-color: white;
@@ -39,7 +39,7 @@
 
   #column-droppable {
     transition: background-color 0.2s ease;
-    height: 93%;
+    height: 100%;
     border: 1px solid lightgrey;
     border-radius: 0 0 5px 5px;
     background-color: white;
@@ -51,4 +51,12 @@
   cursor: pointer;
   visibility: hidden;
   opacity: 0;
+}
+
+.col-is-dragging {
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.16), 4px 4px 4px rgba(0, 0, 0, 0.23) !important;
+  #column-droppable {
+    border: none !important;
+    background-color: rgb(245, 250, 248) !important;
+  }
 }
