--- a/src/components/UI/Navbar/components/Delete/index.scss
+++ b/src/components/UI/Navbar/components/Delete/index.scss
@@ -1,7 +1,4 @@
 #delete-popup {
-  // #delete-tag {
-  //   margin-bottom: 0;
-  // }
   font-size: 1.3em;
   .component-less {
     padding: 0 10px;
@@ -29,7 +26,7 @@
       margin-bottom: 10px;
     }
     .delete-popup-button:hover {
-      background-color: #c9c9c9;
+      background-color: rgb(219, 219, 219);
     }
   }
 }
