--- a/src/components/UI/MarkdownEditor/Editor/index.scss
+++ b/src/components/UI/MarkdownEditor/Editor/index.scss
@@ -6,4 +6,32 @@
   .tag-container {
     margin-bottom: 10px;
   }
+  .editor-column {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    .styled-select {
+      border: 1px solid rgb(219, 217, 217);
+      overflow: hidden;
+      width: 180px;
+    }
+    .styled-select {
+      select {
+        background: transparent;
+        border: none;
+        font-size: 14px;
+        padding: 5px;
+        width: 200px;
+      }
+    }
+
+    .semi-square {
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+    }
+    .background-color {
+      background-color: #ccd9e052;
+    }
+  }
 }
