--- a/src/components/UI/Navbar/index.scss
+++ b/src/components/UI/Navbar/index.scss
@@ -3,9 +3,8 @@
   border: 1px solid rgb(238, 238, 238);
   align-items: center;
   box-shadow: 5px 10px 20px -20px rgb(85, 172, 238);
-  ul.menu,
-  ul.sub-menu {
-    height: 50px;
+  ul.menu {
+    height: 35px;
     margin: 0 auto;
     align-items: center;
     border: 1px solid rgb(238, 238, 238);
@@ -81,7 +80,7 @@
     border: 1px solid lightgray;
     border-radius: 5px;
     background: #fff;
-    padding-bottom: 10px;
+    padding: 10px 0;
     width: 200px;
     text-align: center;
   }
