--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -9,11 +9,11 @@
   flex-grow: 1;
 
   .column-header {
-    background-color: white;
+    background-color: rgb(245, 250, 248);
     padding: 8px;
     margin: 0 0 0 0;
     border: 1px solid lightgray;
-    border-bottom: none;
+    // border-bottom: none;
     display: flex;
     align-items: center;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05), 0px 0px 6px rgba(0, 0, 0, 0.15);
@@ -43,6 +43,7 @@
     transition: background-color 0.2s ease;
     height: 100%;
     border: 1px solid lightgrey;
+    border-top: none;
     border-radius: 0 0 5px 5px;
     background-color: white;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
