--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -1,5 +1,5 @@
 #column-draggable {
-  margin: 8px;
+  // margin: 8px;
   border-radius: 10px;
   min-width: 300px;
   max-width: 300px;
@@ -13,7 +13,6 @@
     padding: 8px;
     margin: 0 0 0 0;
     border: 1px solid lightgray;
-    // border-bottom: none;
     display: flex;
     align-items: center;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05), 0px 0px 6px rgba(0, 0, 0, 0.15);
