--- a/src/components/Views/List/Board/index.scss
+++ b/src/components/Views/List/Board/index.scss
@@ -5,6 +5,11 @@
   overflow-y: auto;
   border: 1px solid lightgray;
   padding: 10px;
+  .list-col-is-dragging {
+    // box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.16), 4px 4px 4px rgba(0, 0, 0, 0.23) !important;
+    background-color: rgb(245, 250, 248) !important;
+    border: none !important;
+  }
   #column-droppable {
     width: 700px;
   }
