Add title input to filter. Update CSS

--- a/src/components/UI/MarkdownEditor/Editor/index.scss
+++ b/src/components/UI/MarkdownEditor/Editor/index.scss
@@ -3,6 +3,11 @@
   .editor-description {
     height: 200px;
   }
+  .editor-title {
+    input {
+      width: 100%;
+    }
+  }
   .tag-container {
     margin-bottom: 10px;
   }
