--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -20,16 +20,28 @@
     box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.16), 2px 3px 6px rgba(0, 0, 0, 0.23);
   }
 
-  .card-description {
+  .card-draggable-container {
     display: flex;
-    justify-content: space-between;
     width: 100%;
-    div {
-      display: flex;
-      align-items: center;
-      p {
-        margin: 0 5px 0 0;
+    .left-side {
+      width: 75%;
+      .card-title {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        div {
+          display: flex;
+          align-items: center;
+          p {
+            margin: 0 5px 0 0;
+          }
+        }
       }
+    }
+    .right-side {
+      display: flex;
+      justify-content: flex-end;
+      width: 25%;
     }
   }
 }
