--- a/src/components/UI/MarkdownEditor/index.scss
+++ b/src/components/UI/MarkdownEditor/index.scss
@@ -35,6 +35,10 @@
     }
   }
 
+  button:not(.button-active):hover {
+    background-color: rgb(219, 219, 219);
+  }
+
   .button-active {
     background-color: #4797e7;
     color: white;
