Filter view. Update card look.

--- a/src/components/Views/Kanban/Board/index.scss
+++ b/src/components/Views/Kanban/Board/index.scss
@@ -1,8 +1,8 @@
 #board-droppable {
   display: flex;
-  height: 90vh;
-  border: 1px solid lightgray;
-  padding: 10px;
+  height: 84vh;
+  // border: 1px solid lightgray;
+  // padding: 10px;
   overflow-x: auto;
   overflow-y: hidden;
 }
