--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -23,8 +23,8 @@
   .card-draggable-container {
     display: flex;
     width: 100%;
-    .left-side {
-      width: 75%;
+    .card-row {
+      width: 100%;
       .card-title {
         display: flex;
         justify-content: space-between;
@@ -37,11 +37,6 @@
           }
         }
       }
-    }
-    .right-side {
-      display: flex;
-      justify-content: flex-end;
-      width: 25%;
     }
   }
 }
