Beginning grouping ui changes.

--- a/src/components/Views/Kanban/Board/index.scss
+++ b/src/components/Views/Kanban/Board/index.scss
@@ -1,6 +1,6 @@
 #board-droppable {
   display: flex;
-  height: 84vh;
+  min-height: 20vh;
   // border: 1px solid lightgray;
   // padding: 10px;
   overflow-x: auto;
