Add basic comments field to card.

--- a/src/components/UI/MarkdownEditor/Editor/index.scss
+++ b/src/components/UI/MarkdownEditor/Editor/index.scss
@@ -1,7 +1,10 @@
 #editor-mode {
   height: 100%;
   .editor-description {
-    height: 200px;
+    height: 125px;
+  }
+  .editor-comments {
+    height: 125px;
   }
   .editor-title {
     input {
