Remove null choice of column id.

--- a/src/components/UI/Navbar/components/Create/AddCardWrapper/index.scss
+++ b/src/components/UI/Navbar/components/Create/AddCardWrapper/index.scss
@@ -9,7 +9,8 @@
     #editor-mode {
       .editor-id,
       .editor-title,
-      .editor-description {
+      .editor-description,
+      .editor-comments {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
