--- a/src/components/UI/Navbar/index.scss
+++ b/src/components/UI/Navbar/index.scss
@@ -1,12 +1,11 @@
 #navbar {
-  border: 1px solid rgb(238, 238, 238);
   align-items: center;
   box-shadow: 5px 10px 20px -20px rgb(85, 172, 238);
+  background-color: #edf7f5;
   ul.menu {
     height: 35px;
     margin: 0 auto;
     align-items: center;
-    border: 1px solid rgb(238, 238, 238);
     padding: 0;
     list-style: none;
     display: flex;
@@ -37,12 +36,12 @@
       background-color: rgb(243, 243, 243);
       transition: box-shadow 0.2s ease;
       transition: background-color 0.2s ease;
-      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.16),
-        2px 3px 6px rgba(0, 0, 0, 0.23);
+      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23),
+        2px 3px 6px rgba(0, 0, 0, 0.43);
     }
   }
   ul > li:not(:first-child):not(.brand) {
-    border: 1px solid rgb(238, 238, 238);
+    border: 1px solid #d4d6d6;
   }
 }
 
