--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,16 @@
+html {
+  height: 100%;
+}
 body {
+  height: 100%;
+  background-image: radial-gradient(
+    circle,
+    #abc7c8,
+    #a6c9ca,
+    #a1cbcd,
+    #9ccdcf,
+    #97cfd1
+  );
+  margin: 0;
   font-family: "Roboto", sans-serif;
 }
