Update urls. update css.

--- a/src/components/Views/Kanban/Board/index.scss
+++ b/src/components/Views/Kanban/Board/index.scss
@@ -2,7 +2,7 @@
   display: flex;
   // min-height: 20vh;
   // max-height: 40vh;
-  // border: 1px solid lightgray;
+  justify-content: center;
   padding: 10px;
   overflow-x: auto;
   overflow-y: auto;
