Update some css with navbar and column header.

--- a/src/components/UI/Navbar/index.scss
+++ b/src/components/UI/Navbar/index.scss
@@ -1,7 +1,7 @@
 #navbar {
   align-items: center;
-  box-shadow: 5px 10px 20px -20px rgb(85, 172, 238);
-  background-color: #edf7f5;
+  box-shadow: 5px 10px 20px -20px rgb(97, 186, 253);
+  background-color: #f6faf9;
   ul.menu {
     height: 45px;
     margin: 0 auto;
