--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -8,7 +8,7 @@
   flex-grow: 1;
 
   .column-header {
-    background-color: rgb(245, 250, 248);
+    background-color: #f6faf9;
     padding: 8px;
     margin: 0 0 0 0;
     border: 1px solid lightgray;
