--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -1,6 +1,6 @@
 #card-draggable {
   border: 1px solid lightgrey;
-  padding: 8px;
+  padding: 5px;
   display: flex;
   align-items: start;
   background-color: white;
@@ -33,6 +33,30 @@
           align-items: center;
           p {
             margin: 0 5px 0 0;
+          }
+        }
+        .left-side {
+          width: 60%;
+          word-break: break-all;
+        }
+        .right-side {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-end;
+          .card-icon-row {
+            margin-top: 5px;
+          }
+          #vote-container {
+            .vote-thumbs-container {
+              margin: 0;
+            }
+            .vote-thumbs-container:first-child {
+              margin-right: 5px;
+            }
+            .vote-counter {
+              width: 25px;
+              height: 15px;
+            }
           }
         }
       }
