Update background color again.

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,11 +5,11 @@ body {
   height: 100%;
   background-image: radial-gradient(
     circle,
-    #abc7c8,
-    #a6c9ca,
-    #a1cbcd,
-    #9ccdcf,
-    #97cfd1
+    #b4c7c9,
+    #a5c3cc,
+    #99bed2,
+    #93b8d8,
+    #94b0dc
   );
   margin: 0;
   font-family: "Roboto", sans-serif;
