--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -8,7 +8,7 @@
   flex-grow: 1;
 
   .column-header {
-    background-color: #f6faf9;
+    background-color: #e5eae9;
     padding: 8px;
     margin: 0 0 0 0;
     border: 1px solid lightgray;
@@ -39,7 +39,7 @@
 
   #column-droppable {
     transition: background-color 0.2s ease;
-    height: 100%;
+    height: 150%;
     border: 1px solid lightgrey;
     border-top: none;
     border-radius: 0 0 5px 5px;
