Add title to login. Update css.

--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -8,7 +8,7 @@
   flex-grow: 1;
 
   .column-header {
-    background-color: #e5eae9;
+    background-color: #f3f3f3;
     padding: 8px;
     margin: 0 0 0 0;
     border: 1px solid lightgray;
