--- a/src/components/Views/Login/index.scss
+++ b/src/components/Views/Login/index.scss
@@ -1,4 +1,13 @@
 #login {
+  height: 100%;
+  background-image: radial-gradient(
+    circle,
+    #b4c7c9,
+    #a5c3cc,
+    #99bed2,
+    #93b8d8,
+    #94b0dc
+  );
   .login-container {
     border: none;
     background-color: #f6faf9;
