--- a/src/index.scss
+++ b/src/index.scss
@@ -3,14 +3,11 @@ html {
 }
 body {
   height: 100%;
-  background-image: radial-gradient(
-    circle,
-    #b4c7c9,
-    #a5c3cc,
-    #99bed2,
-    #93b8d8,
-    #94b0dc
-  );
   margin: 0;
   font-family: "Roboto", sans-serif;
+}
+
+#root,
+#app-container {
+  height: 100%;
 }
