--- a/src/components/UI/Navbar/components/Create/index.scss
+++ b/src/components/UI/Navbar/components/Create/index.scss
@@ -19,15 +19,15 @@
       height: 50px;
       padding: 10px 16px;
       border-radius: 10px;
-      background-color: #f1f1f1;
-      border: 1px solid lightgray;
+      background-color: #4797e7;
+      color: white;
       cursor: pointer;
     }
     button:not(:last-child) {
       margin-bottom: 10px;
     }
     button:hover {
-      background-color: rgb(219, 219, 219);
+      background-color: #2b6aa8;
     }
   }
 }
