--- a/src/components/UI/Navbar/components/View/index.scss
+++ b/src/components/UI/Navbar/components/View/index.scss
@@ -15,16 +15,17 @@
     height: 50px;
     padding: 10px 16px;
     border-radius: 10px;
-    background-color: #f1f1f1;
+    background-color: #4797e7;
+    color: white;
     cursor: pointer;
   }
   button:not(:last-child) {
     margin-bottom: 10px;
   }
   button:not(.button-active):hover {
-    background-color: rgb(219, 219, 219);
+    background-color: #2b6aa8;
   }
   .button-active {
-    background-color: #4797e7;
+    background-color: #2b6aa8;
   }
 }
